--- a/cobweb-admin.yml
+++ b/cobweb-admin.yml
@@ -5,6 +5,12 @@ spring:
     url: jdbc:mysql://zxr1998.com.cn/cobweb?characterEncoding=UTF-8&useSSL=false
     username: XRom
     password: XRom45
+  rabbitmq:
+    host: zxr1998.com.cn
+    username: XRom
+    password: XRom45
+    virtual-host: /
+    publisher-confirms: true
   redis:
     host: zxr1998.com.cn
     password: XRom19980126.
